--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<div>
 	<p>We can optimize a solution using both time and space optimization. To optimize a program,</p>
 	<ol>
 		
@@ -15,6 +16,7 @@
 <li>We can reduce both time and space complexity by deploying relevant algorithms</li>
 	
 	</ol>
+		</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
